# figuringdocs

./: README.md  mkdocs.yml  pyproject.toml
docs/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/authors/: index.html
site/changelog/: index.html
site/reference/asd/: index.html
site/reference/dupa/: index.html
site/reference/nword/urmom/: index.html
site/search/: search_index.json
src/figuringdocs/: asd.py  dupa.py
src/figuringdocs/nword/: urmom.py
