[tool.poetry]
name = "figuringdocs"
version = "0.1.0"
description = ""
authors = ["Jan Bronicki <janbronicki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.1.15"
mkdocstrings-crystal = "^0.3.6"
mkdocs-section-index = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
